♻️ Refactor: Replace SQLite with H2 database
- Replace sqlite-jdbc with H2 dependency in pom.xml
- Update DatabaseInit with dynamic absolute path for H2
- Use Properties to inject DB URL into MyBatis configuration
- Update SQL syntax for H2 (AUTO_INCREMENT, VARCHAR)